# easy_tx

./: CMakeLists.txt  gamble-doc.xlsx
app/main-app/: CMakeLists.txt  main.cpp
app/unit-test/test-log/: CMakeLists.txt  main.cpp
app/unit-test/test-observer/: CMakeLists.txt  main.cpp
app/unit-test/test-screenShot/: CMakeLists.txt  main.cpp
board/: CMakeLists.txt
board/ScreenShot/: CMakeLists.txt  ScreenShot.h
board/log/: CMakeLists.txt
easy_tx/: CMakeLists.txt  easy_tx.cpp  easy_tx.h
easy_tx/lib/observer/: CMakeLists.txt  observer.cpp  test-observer.cpp
easy_tx/service/log/: CMakeLists.txt  main_test_log.cpp  si_log.h  test-log.cpp
lib/observer/: CMakeLists.txt  observer.cpp  observer.h
service/log/: CMakeLists.txt  si_log.h
service/si_ScreenShot/: CMakeLists.txt  si_ScreenShot.h
